# Eins

./: Eins.md  OxyUno.md  cargo.toml
eins_client/: Cargo.toml
eins_lib/: Cargo.toml
eins_lib/src/: cards.rs  game.rs  lib.rs
eins_server/: Cargo.toml
eins_server/src/: main.rs
oxy_uno_client/: Cargo.toml
oxy_uno_lib/: Cargo.toml
oxy_uno_server/: Cargo.toml
