[package]
name = "eins_server"
version = "0.1.0"
authors = ["Torben Clasen <t.clasen@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
eins_lib = { path = "../eins_lib"}
tokio = { version = "1.36.0", features = ["full"] }
